# internal-knowledge-copilot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  auth.py  chat.py  documents.py  feedback.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: analytics.py  auth.py  chat.py  documents.py  feedback.py
backend/app/services/: analytics_service.py  audit_service.py  chat_service.py  document_service.py  feedback_service.py  ingestion_service.py  retrieval_service.py  seed_service.py  vector_service.py
docs/: architecture.md  roadmap.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: workspace-client.tsx
